# JIPP2

./: .gitignore  CMakeLists.txt  README.MD  main.cpp
MatrixTest/: CMakeLists.txt
MatrixTest/include/: TimeMeasure.h
MatrixTest/src/: TimeMeasure.cpp  main.cpp
Projekt1/: CMakeLists.txt
Projekt1/matrixApp/: CMakeLists.txt  help.cpp  help.h  main.cpp  matrix.cpp  matrix.h
Projekt1/matrixLib/: CMakeLists.txt  matrixLib.cpp  matrixLib.h
StopExample/: CMakeLists.txt  Line.cpp  Line.h  Stop.cpp  Stop.h  vExample.cpp
Zadania/: CMakeLists.txt  main.cpp
Zadania/include/: Music.h
Zadania/src/: Music.cpp
database/: database.csv
include/: Average_earnings.h  CsvLib.h  Employee.h  Employee_exception.h  Employee_vector.h  Employee_write_read.h  ImaginaryNumber.h  Mandatory_contract.h  Max_min.h  Node.h  Point.h  Pojazd.h  Security.h  Transformation.h  Triangle.h  Vector.h  help.h
lab4/: CMakeLists.txt  main.cpp
lab4/include/: library.h
lab4/src/: dekonstruktory.cpp  klasy.cpp  konstruktory.cpp  struktury.cpp
lab7/: CMakeLists.txt  main.cpp
notes/: CMakeLists.txt  main.cpp
operacje na plikach/: CMakeLists.txt  main.cpp
simpleCalc/: CMakeLists.txt  include_calc.h  src_calc.cpp
src/: Average_earnings.cpp  CsvException.cpp  CsvLib.cpp  Employee.cpp  Employee_exception.cpp  Employee_vector.cpp  Employee_write_read.cpp  ImaginaryNumber.cpp  Mandatory_contract.cpp  Max_min.cpp  Node.cpp  Point.cpp  Pojazd.cpp  Security.cpp  Transformation.cpp  Triangle.cpp  Vector.cpp  help.cpp  main.cpp
szablony/: main.cpp
zadania/: CMakeLists.txt
(+10 files in other folders)
